<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quest SMB</string>
    <string name="open_folder">Open Shared Folder</string>
    <string name="search_folder">Search Shared Folders</string>
    <string name="title_activity_main">Open or Search Shared Folders</string>
    <string name="location_go">Go</string>
    <string name="location_recent">Recent places</string>
     <string name="info_settings">Settings</string>
     <string name="file_name">Name</string>
     <string name="file_type">Type</string>
     <string name="file_size">Size</string>
      <string name="user_name">Username</string>
      <string name="pass_word">Password</string>
      <string name="domain">Domain</string>
       <color name="layout_separator_color">#999999</color>
       <string name="address_not_available">is not available,ensure that you have a network connection</string>
       <string name="folder_dialog_title">Opening Folder</string>
       <string name="folder_dialog_message">Please Wait...</string>
       <string name="back_button">Go back</string>
       <string name="forward_button">Forward</string>
       <string name="database_name">QUEST_SMB</string>
       <string name="database_path">/data/data/com.quest.smb/databases/</string>
       <color name="extra_font_color">#3366cc</color>
       <string name="spin_prompt">Recent Usernames</string>
       <string name="recent_usernames_button">Select recent usernames</string>
      <string name="location_hint">e.g 192.168.1.100</string>
      <string name="search_descrip">Search for files in shared folders on all windows computers on your network, enter at least one search parameter </string>
      <string name="current_ip">Your Ip Address</string>
      <string name="ip_address_from">From IP Address</string>
      <string name="ip_address_to">To IP Address</string>
      <string name="filename_key">Filename Keywords</string>
      <string name="file_extensions">File Extensions</string>
       <string name="file_size_less">File Size Less Than</string>
       <string name="save_on_find">Save On Find</string>
       <string name="save_location">Save Location</string>
       <string name="file_browse">Browse</string>
       <string name="start_search">Start Search</string>
      
</resources>