<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tabhost"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<TabWidget android:id="@android:id/tabs"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
/>
<FrameLayout android:id="@android:id/tabcontent"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>

    <TableLayout android:id="@+id/tab1"
        android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:stretchColumns="*"
         >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            >
          
	      <AutoCompleteTextView
	          android:hint="@string/location_hint"
	          android:id="@+id/location_bar"
	          android:layout_width="250dp"
	          android:layout_height="30dp"
	          android:background="@drawable/location_back"
	          android:enabled="true"
	          android:gravity="top"
	          android:textColor="#000000"
	          android:paddingLeft="10dp"
	          android:inputType="text"
	          android:completionThreshold="1"
	          android:singleLine="true" />
	         
	      <ImageButton
	        android:background="@drawable/location_back"
			android:layout_width="40dp"
			android:layout_height="30dp"
			android:contentDescription="@string/location_go"
			android:id="@+id/go_button"
			android:src="@drawable/go" />
	    </TableRow>

	    <LinearLayout
	         android:layout_height="wrap_content"
	         android:layout_width="wrap_content"
	         >
	      <ImageButton
	        android:background="@drawable/location_back"
			android:layout_width="50dp"
			android:layout_height="30dp"
			android:contentDescription="@string/back_button"
			android:id="@+id/back_button"
			android:src="@drawable/back" />
	      <ImageButton
	        android:background="@drawable/location_back"
			android:layout_width="50dp"
			android:layout_height="30dp"
			android:contentDescription="@string/forward_button"
			android:id="@+id/forward_button"
			android:src="@drawable/forward" />
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:paddingLeft="10dp"
	            android:background="@drawable/display_back"
	            />
	    </LinearLayout>
	  
	     <LinearLayout
	        android:layout_height="fill_parent"
	        android:layout_width="fill_parent"
	         >
	         
	      <ListView
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:id="@+id/display_area_name"
		    	android:divider="#999999"
		    	android:dividerHeight="1dp"
		    	
		     />
	      </LinearLayout>
	    </TableLayout>

	
        
  

<TableLayout android:id="@+id/tab2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:stretchColumns="1"
	android:paddingTop="4dip"
>


</TableLayout>

<TableLayout android:id="@+id/tab3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TableRow>
      <TextView 
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/user_name"
		android:paddingLeft="10dp"
        />
		 <AutoCompleteTextView
	          android:id="@+id/username"
	          android:layout_width="200dp"
	          android:layout_height="40dp"
	          android:background="@drawable/location_back"
	          android:enabled="true"
	          android:gravity="top"
	          android:textColor="#000000"
	          android:inputType="text"
	          android:paddingLeft="10dp"
	          android:completionThreshold="1"
	          android:singleLine="true" />
		  <ImageButton
	        android:background="@drawable/location_back"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:contentDescription="@string/recent_usernames_button"
			android:id="@+id/recent_button"
			android:src="@drawable/down" />
	</TableRow>
	
	
      <TableRow>
    	<TextView 
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/pass_word"
		android:paddingLeft="10dp"
        />
    <EditText 
         android:id="@+id/password"
         android:paddingLeft="10dp"
         android:inputType="textPassword"
         android:layout_width="200dp"
	     android:layout_height="wrap_content"
        />
	</TableRow>
	
     <TableRow>
   		 <TextView 
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/domain"
		android:paddingLeft="10dp"
        />
      <EditText 
         android:id="@+id/domain"
         android:paddingLeft="10dp"
         android:layout_width="200dp"
	     android:layout_height="wrap_content"
         android:inputType="text"
        />
	</TableRow>
	  <View android:layout_width="fill_parent"
     		android:layout_height="1dp"
     		android:paddingTop="10dp"
     		android:background="@color/layout_separator_color"
       />
</TableLayout>


</FrameLayout>

</LinearLayout>
</TabHost>